src/test/resources/Fall_21_Test_Cases/Good/LO-0/lvl0-good-easy-9.lo
// test interaction between parenthesis and binary operator
int a;
{
a = ((5) + 6);
}