src/test/resources/Fall_21_Test_Cases/Bad/LO-3/lvl3-bad-5.lo
// invalid grammar
class square(int length) {
      int length = this.length;
}